mobile accordion: fixing padding on mobile-titles for icons

--- a/components/_accordion.scss
+++ b/components/_accordion.scss
@@ -79,7 +79,7 @@
 	/* ----- Mobile Accordion Icons ------ */
 	.mobile-title {
 		height: 25px;
-		padding: 10px 0;
+		padding: 10px 0 10px 30px;
 		background: transparent url(https://confluence.engin.umich.edu/download/attachments/30508410/icons-mobile.png) left 0 no-repeat;
 		#pricing & {
 			background-position: left 0;
